Fix weird wrapping in empty dashboard
When all the dashboard areas were empty, the user details were wrapped
below the avatar instead of showing up next to them.

--- a/indico/web/client/styles/modules/_dashboard.scss
+++ b/indico/web/client/styles/modules/_dashboard.scss
@@ -17,6 +17,10 @@
     @media (max-width: $wide-screen-width) {
         max-width: 100%;
     }
+
+    & > .page-content {
+        width: 100%;
+    }
 }
 
 .banner.user-dashboard {
@@ -194,6 +198,8 @@
 }
 
 .your-details {
+    display: flex;
+    flex-wrap: wrap;
     margin-bottom: 15px;
 
     .avatar-image .ui.label {
@@ -216,5 +222,9 @@
             color: $dark-gray;
             margin-right: 10px;
         }
+    }
+
+    .actions {
+        margin-left: auto;
     }
 }
